refactot: changing api path names
