# app/swagger/swagger.json
@@ -105,7 +105,7 @@
         ]
       }
     },
-    "/addNew": {
+    "/addContact": {
       "post": {
         "tags": [
           "Add New Contact"
@@ -145,7 +145,7 @@
         }]
       }
     },
-    "/contacts": {
+    "/getAllContacts": {
       "get": {
         "tags": [
           "View All Contacts using authorization"
@@ -180,7 +180,7 @@
       }
     },
 
-    "/contacts/{:_id}": {
+    "/getContact/{:_id}": {
       "get": {
         "tags": [
           "Get Single Contact using Id"
@@ -218,7 +218,7 @@
         }]
       }
     },
-    "/update/{:_id}": {
+    "/updateContact/{:_id}": {
       "put": {
         "tags": [
           "Update Contact using Id"
@@ -264,7 +264,7 @@
         }]
       }
     },
-    "/delete/{:_id}": {
+    "/deleteContact/{:_id}": {
       "delete": {
         "tags": [
           "Delete Contact using Id"
@@ -332,7 +332,7 @@
         }
       }
     },
-    "addNew": {
+    "addContact": {
       "type": "object",
       "properties": {
         "firstName": {
@@ -362,7 +362,7 @@
       }
     },
      
-    "update": {
+    "updateContact": {
       "type": "object",
       "properties": {
         "firstName": {
